# Opencv

./: CMakeCache.txt  CMakeLists.txt  DisplayImage  Makefile  cmake_install.cmake
01_Basics/: output
01_Basics/01_Basics/: 01_Basics.mk  01_Basics.project  compile_flags.txt  main.cpp
01_Basics/01_Basics/Debug/: 01_Basics
02_Loading_Showing_Saving/: main.cpp  output
02_Loading_Showing_Saving/02_Loading_Showing_Saving/: 02_Loading_Showing_Saving.mk  02_Loading_Showing_Saving.project  compile_flags.txt  main.cpp
03_Windows/: main.cpp
03_Windows/03_Windows/: 03_Windows.mk  03_Windows.project  compile_flags.txt
04_Accessing_Pixels/04_Accessing_Pixels/: 04_Accessing_Pixels.mk  04_Accessing_Pixels.project  compile_flags.txt  main.cpp
05_Split_and_Merge/: main.cpp
05_Split_and_Merge/05_Split_and_Merge/: 05_Split_and_Merge.mk  05_Split_and_Merge.project  compile_flags.txt
06_Taking_The_DFT_of_A_Grayscale_Image/: main.cpp
06_Taking_The_DFT_of_A_Grayscale_Image/06_Taking_The_DFT_of_A_Grayscale_Image/: 06_Taking_The_DFT_of_A_Grayscale_Image.project  compile_flags.txt
12_Webcam_and_video_capture/: 12_Webcam_and_video_capture.mk  12_Webcam_and_video_capture.project  compile_flags.txt
12_Webcam_and_video_capture/12_Webcam_and_video_capture/: main.cpp
15_Aruco_Markers/: 15_Aruco_Markers.mk  main.cpp
15_Aruco_Markers/15_Aruco_Markers/: 15_Aruco_Markers.project  compile_flags.txt
15_Aruco_Markers/Debug/: 15_Aruco_Markers
Basics_01/Basics_01/: Basics_01.project
Opencv/: Makefile  Opencv.workspace
Opencv/.codelite/: Opencv.session
(+5 files in other folders)
